# Data_Quality

./: .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.bridge  README.md  Suivi_qualite.pbix  docker-compose.yml  main.py  minio_airflow_bridge.py  pyproject.toml  requirements.txt
airflow/dags/: historisation_dwh.py  ingestion_donnees.py  reentrainement_modele.py
app/: main.py
app/frontend/: anomalies.html  decisions.html  index.html  profiling.html
app/frontend/js/: anomalies.js  profiling.js
app/models/: colonnes_modele.pkl
app/routers/: anomalies.py  dashboard.py  decisions.py  prediction.py  profiling.py
app/services/: contexts.py  db.py  features.py  model.py
data/: agences.csv  anomalies_report.json  cartes.csv  clients.csv  comptes.csv  digital_usage.csv  gabs.csv
data/processed/: profiling_report.json  profiling_summary.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/marts/: dim_agences.sql  dim_clients.sql  (+2 more)
dbt/snapshots/: cartes_snapshot.sql  clients_snapshot.sql  comptes_snapshot.sql
dbt/tests/: carte_active_compte_cloture.sql  client_agence_fermee.sql  compte_client_inexistant.sql  contact_invalide.sql  digital_client_inexistant.sql  tx_compte_inexistant.sql  tx_gab_sans_id.sql  tx_non_gab_avec_id.sql
notebooks/: EDA_v2.ipynb  modelisation_v2.ipynb  preprocessing_v2.ipynb
scripts/: generate_data.py  generate_ml_dataset.py  label_decisions.py  load_to_postgres.py  loading.py  profiling.py  storage.py  validate_files.py
sql/: 01_schema.sql  02_constraints.sql  04_history.sql  04_keys.sql
(+14 files in other folders)
